# InferenceEngine2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
experiment/: CMakeLists.txt
experiment/npy_data/: check_npy_data.py  create_random_data.py  experiment_npy_data.cpp
experiment/xtensor_seg/: xtensor_seg.cpp
inference/: CMakeLists.txt  inference.cpp  inference.h  inference_engine.h
inference/onnxruntime/: onnxruntime.cpp  onnxruntime.h  onnxruntime_convert.cpp  onnxruntime_convert.h
inference/tensor/: buffer.cpp  buffer.h  device.h  tensor.cpp  tensor.h  tensor_helper.cpp  tensor_helper.h
inference/tensorrt/: design.md  tensorrt.cpp  tensorrt.h  tensorrt_common.cpp  tensorrt_common.h  tensorrt_convert.cpp  tensorrt_convert.h  tensorrt_params.h  tensorrt_to_string.cpp  tensorrt_to_string.h
inference/utils/: assert.h  backtrace.cpp  backtrace.h  construct.h  elapse_time.hpp  exception.cpp  exception.h  log.cpp  log.h  macro.h  map.h  pystring.cpp  pystring.h  to_string.h
modelzoo/: CMakeLists.txt
modelzoo/common/: detect_common.hpp  filesystem_common.hpp  img_common.cpp  img_common.hpp  pose_common.hpp  segment_common.hpp
modelzoo/data/mnist/: README.md  mnist.fp16.engine  mnist.int8.engine
modelzoo/mnist/: README.md  example_mnist.cpp  mnist.cpp  mnist.onnx  mnist_fp16.onnx
modelzoo/mnist_add_process/: example_mnist_add_process.cpp  mnist_add_process.hpp
modelzoo/mnist_add_process/data/: mnist_add_process.onnx
modelzoo/mnist_dynamic/: README.md  example_mnist_dynamic.cpp  mnist_dynamic.hpp
modelzoo/mnist_dynamic/data/: mnist_dynamic.onnx
modelzoo/trt_mnist/: example_trt_mnist.cpp
modelzoo/yolo11n_obb/: example_yolo11n_obb.cpp  yolo11n_obb.cpp  yolo11n_obb.h
modelzoo/yolo11n_pose/: example_yolo11n_pose.cpp  yolo11n_pose.hpp
modelzoo/yolo11n_seg/: example_yolo11n_seg.cpp  yolo11n_seg.cpp  yolo11n_seg.h  yolo11n_seg.hpp
modelzoo/yolov8n/: example_yolov8n.cpp  onnx_fp32_2_fp16.py  yolov8n.hpp
modelzoo/yolov8n/data/: labels.txt  onnx_fp32_2_fp16.py
test/: CMakeLists.txt  test_main.cpp  test_mnist.cpp  test_mnist_dynamic.cpp  test_yolov8n.cpp
tools/: build_tool.py  build_tool2.py  compare_numpy_data.py
