file(GLOB_RECURSE INFERENCE_SRC
    "*.h" "*.hpp" "*.cpp"
)

message("[INFERENCE_ENGINE] INFERENCE_SRC: ${INFERENCE_SRC}")
message("[INFERENCE_ENGINE] INFERENCE_INC_DIRS: ${INFERENCE_INC_DIRS}")
message("[INFERENCE_ENGINE] INFERENCE_LINK_DIRS: ${INFERENCE_LINK_DIRS}")
message("[INFERENCE_ENGINE] INFERENCE_DEP_LIBS: ${INFERENCE_DEP_LIBS}")
message("[INFERENCE_ENGINE] INFERENCE_COMPILE_DEFS: ${INFERENCE_COMPILE_DEFS}")

add_library(inference STATIC ${INFERENCE_SRC})
target_include_directories(inference PUBLIC ${INFERENCE_INC_DIRS})
target_link_directories(inference PUBLIC ${INFERENCE_LINK_DIRS})
target_link_libraries(inference PUBLIC ${INFERENCE_DEP_LIBS})
target_compile_definitions(inference PUBLIC ${INFERENCE_COMPILE_DEFS})
